js/js.translator/testData/incremental/invalidation/companionInlineFunctionWithCrossModuleInliner/lib2/l2.5.kt
inline fun foo(): Int {
    bar(null)
    return MyClass1.InternalClass.companionMethod() + 1
}

fun bar(x: Any?): Any = x ?: MyClass1()
